--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -6,19 +6,10 @@ on:
 
 jobs:
   auto-approve:
-    if: github.actor == 'github-actions[bot]' && contains(github.event.pull_request.title, 'Policy Sync')
-    runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
-    steps:
-      - name: Auto approve policy sync PRs
-        uses: hmarr/auto-approve-action@v3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Enable auto-merge
-        uses: peter-evans/enable-pull-request-automerge@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          pull-request-number: ${{ github.event.pull_request.number }}
-          merge-method: squash
+    uses: NixLine-org/.github/.github/workflows/nixline-auto-approve.yml@stable
+    with:
+      pr_title_pattern: "Policy Sync"
+      actor_filter: "github-actions[bot]"
+      merge_method: "squash"
+      enable_auto_merge: true
+      require_checks: true
